# challenge_picnic-python-assignment

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
picnic-assignment/: README.md  pyproject.toml
picnic-assignment/mount-my-scenarios/: README.md
picnic-assignment/src/picnic/assignment/: __main__.py  cli.py  constants.py  model.py
picnic-assignment/tests/: test_main.py  test_model.py
picnic-assignment/tests/resources/: outputs.py
