[build-system]
requires = [
    # Support for setuptools.build_meta was added in 36.6.0 by
    # https://github.com/pypa/setuptools/pull/1143
    "setuptools>=36.6.0",
    # For building wheels
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "picnic_assignment"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
description = "Picnic Recruitment Python Assignment"
dynamic = ["version", "readme"]
dependencies = [
    "requests == 2.31"
]

[project.optional-dependencies]
test = [
    "build == 0.7.0",
    "pytest == 7.1.2",
    "pytest-cov == 3.0.0"
]

[project.scripts]
event-process = "picnic.assignment.__main__:entry"

[options]
package_dir = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "picnic.__version__"}
readme = {file = ["README.md"]}


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report html --cov-report term -v"
pythonpath = ["src"]
testpaths = [
    "tests"
]
